<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/tableHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:background="@color/tableHeaderDivider"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/takeoffBtn"
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/tableHeaderBackground"
            android:clickable="false"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/takeoff_button" />

        <Button
            android:id="@+id/landingBtn"
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@color/tableHeaderBackground"
            android:clickable="false"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scrollHorizontally="true"
            android:text="@string/landing_button" />

        <Button
            android:id="@+id/durationBtn"
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@color/tableHeaderBackground"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/duration_button" />

        <Button
            android:id="@+id/priceBtn"
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@color/tableHeaderBackground"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scrollHorizontally="true"
            android:text="@string/price_button" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/headerBackground" >

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/app_name"
            android:textColor="@color/headerFont"
            android:textSize="18dip"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >


            <ImageButton
                android:id="@+id/refreshButton"
                android:layout_width="42dip"
                android:layout_height="40dip"
                android:src="@android:drawable/ic_popup_sync"
                android:visibility="visible" android:layout_marginTop="1dip" android:layout_gravity="center_vertical" android:contentDescription="@string/refresh_button"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:visibility="gone" />
            <Button
                android:id="@+id/preferencesButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="40dip"
                android:layout_height="39dip"
                android:layout_gravity="center_vertical"
                android:text="@string/prefs"
                android:textColor="@color/headerFont"
                android:textSize="20dip"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tableHeaderLayout"
        android:background="@color/flightsListBackground" >
        <!-- Preview: listitem=@layout/flight_item -->
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tableHeaderLayout"
        android:background="@color/flightsListBackground"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/empty_loading" android:visibility="gone"/>

</RelativeLayout>